@@ -1,9 +1,17 @@
 ## LDP Client
 
-An JDK9 incubator HTTP client for use with the [Linked Data Platform](https://trellis-ldp.github.io/trellis/apidocs/).
+An JDK9 incubator HTTP client for use with the [Trellis Linked Data Platform](https://trellis-ldp.github.io/trellis/apidocs/).
 
 ## Requirements
 * JDK 9 or higher
 
+### Building
+    $ gradle processBuildTools
+    $ gradle build
+
+### Test Requirements
+* Trellis Application version `0.6.0-SNAPSHOT` published in Maven Local
+* a JUnit runner must be used with the VM option `--add-modules jdk.incubator.httpclient`
+
 ## API
-WIP
+See [LDPClient](https://github.com/pan-dora/ldp-client/blob/master/src/main/java/cool/pandora/ldpclient/LdpClient.java)
